# WeatherAppApi

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: views.py
config/: .env.example  config.py
tests/: test_api.py
