[project]
name = "weather-app"
version = "0.1.0"
description = ""
authors = [
    {name = "yuraaceventura",email = "yuraaceventura@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis (>=5.2.1,<6.0.0)",
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
